# traffcap

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  baseline_schema  lint  main.py  pyproject.toml  queue_test.py  rules.md  server  server.py
.github/workflows/: build.yml  ghcr.yaml
config/: settings.py
dto/: endpoint.py  user.py
http/: endpoints.http  test.http
model/: endpoint.py
repositories/: __init__.py  endpoint_repository.py  repository.py  user_repository.py
routes/: __init__.py  endpoints.py  requests.py  root.py
spa/: README.md  package-lock.json  package.json  quasar.config.js
src/: alembic.ini  schema.json
src/doc/diagrams/: critical_path_inbound_request.bpmn  new_message_notifications.bpmn
src/migrations/: __init__.py  env.py  url.py
src/migrations/versions/: 0.0.1_baseline.py  0.0.1_baseline_schema.py  b413750c7605_baseline_schema.py
src/traffcap/: server.py
src/traffcap/config/: __init__.py  settings.py
src/traffcap/core/: __init__.py  banner.py  logging_configuration.py  metrics.py  standalone_application.py  store.py
src/traffcap/core/tests/: test_banner.py  test_logging_configuration.py
src/traffcap/dto/: __init__.py  endpoint.py  inbound_request.py  outbound_response.py  rule.py  user.py
src/traffcap/http/: endpoints.http  metrics.http  requests.http  responses.http  rules.http  traffic.http
src/traffcap/matches/: __init__.py  old.py
src/traffcap/matches/rules/: __init__.py  body_rule.py  domain_name_rule.py  endpoint_rule.py  header_key_rule.py  header_key_value_rule.py  header_value_rule.py  method_rule.py  port_rule.py  protocol_rule.py  query_param_key_rule.py  query_param_key_value_rule.py  query_param_value_rule.py  root_rule.py  rule_match.py
src/traffcap/model/: __init__.py  http_verbs.py  inbound_request.py  inbound_request_header.py  inbound_request_query_param.py  match.py  outbound_response.py  rule.py  rule_match.py  user.py
src/traffcap/model/response/: __init__.py  inbound_request_headers_query_params.py  rule_matches.py
src/traffcap/repositories/: __init__.py  endpoint_repository.py  inbound_request_repository.py  outbound_response_repository.py  repository.py  rule_repository.py  user_repository.py
src/traffcap/repositories/tests/: test_endpoint_repository.py
src/traffcap/routes/: __init__.py  endpoints.py  inbound_requests.py  metrics.py  requests.py  root.py  rules.py  traffic.py
src/traffcap/spa/: README.md  index.html  package-lock.json  package.json  quasar.config.js  vite.config.ts
src/traffcap/spa/src/: App.vue  main.ts  maps.ts  types.ts
src/traffcap/spa/src/boot/: json_viewer.ts
src/traffcap/spa/src/components/: LeftMenu.vue  PageHeader.vue  RequestTimeline.vue  Toolbar.vue  models.ts  server.ts
src/traffcap/spa/src/layouts/: MainLayout.vue
src/traffcap/spa/src/pages/: InboundRequests.vue  IndexPage.vue
src/traffcap/spa/src/repositories/: repository.ts  rule.ts  traffic.ts
src/traffcap/spa/src/router/: index.ts  routes.ts
src/traffcap/spa/src/views/: AboutView.vue  RulesView.vue  TrafficView.vue
src/traffcap/templates/: env.js
tests/: test_traffcap.py
