[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "ruff>=0.0.265",
    "mypy>=1.2.0",
]
[tool.pdm.scripts]
lint = "ruff src"
test = "pytest src"
server.cmd = "gunicorn traffcap.server:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:9669"
server.env = { "PYTHONPATH" = "src" }

[tool.ruff]
line-length=120

[project]
name = "traffcap"
version = "0.1.0"
description = "A RequestBin like application using FastAPI"
authors = [
    {name = "Chris Read", email = "centurix@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.1",
    "uvicorn[standard]>=0.22.0",
    "gunicorn>=20.1.0",
    "pydantic-jsonapi>=0.11.0",
    "sqlalchemy>=2.0.12",
    "alembic>=1.10.4",
    "websockets>=11.0.2",
    "click>=8.1.3",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
traffcap = "traffcap.server:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
