[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "ruff>=0.0.265",
    "mypy>=1.3.0",
    "pre-commit>=2.21.0",
    "xenon>=0.9.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.2.5",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "mock-alchemy>=0.2.6",
]
[tool.pdm.scripts]
lint = "ruff src"
test = "pytest src"
cover = "pytest --cov=src --cov-report term"
cover_html = "pytest --cov=src --cov-report html"
type_check = "mypy src"
server.cmd = "gunicorn traffcap.server:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:9669"
server.env = { "PYTHONPATH" = "src" }

[tool.ruff]
line-length=119

[project]
name = "traffcap"
version = "0.1.0"
description = "A RequestBin like application using FastAPI"
authors = [
    {name = "Chris Read", email = "centurix@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.1",
    "uvicorn[standard]>=0.22.0",
    "gunicorn>=20.1.0",
    "sqlalchemy>=2.0.12",
    "alembic>=1.10.4",
    "websockets>=11.0.2",
    "click>=8.1.3",
    "aiosqlite>=0.19.0",
    "pymysql>=1.0.3",
    "aiomysql>=0.2.0",
    "jinja2>=3.1.2",
    "pydantic-settings>=2.0.2",
    "pydanja>=0.1.0",
    "dpath>=2.1.6",
]
requires-python = ">=3.8,<3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
traffcap = "traffcap.server:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "gunicorn.app.base",
    "pydantic_jsonapi",
    "mock_alchemy.mocking"
]
ignore_missing_imports = true
