[project]
name = "traffcap"
version = "0.1.0"
description = "A RequestBin like application using FastAPI"
authors = [
    {name = "Chris Read", email = "centurix@gmail.com"},
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "fastapi>=0.95.1",
    "uvicorn[standard]>=0.22.0",
    "gunicorn>=20.1.0",
    "sqlalchemy>=2.0.12",
    "alembic>=1.10.4",
    "websockets>=11.0.2",
    "click>=8.1.3",
    "aiosqlite>=0.19.0",
    "pymysql>=1.0.3",
    "aiomysql>=0.2.0",
    "jinja2>=3.1.2",
    "pydantic-settings>=2.0.2",
    "pydanja>=0.1.0",
    "dpath>=2.1.6",
    "sqlmodel>=0.0.22",
]

[project.scripts]
traffcap = "traffcap.server:cli"

[tool.uv]
package = true

[tool.ruff]
line-length=119

[[tool.mypy.overrides]]
module = [
    "gunicorn.app.base",
    "pydantic_jsonapi",
    "mock_alchemy.mocking"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope="function"

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "ruff>=0.0.265",
    "mypy>=1.3.0",
    "pre-commit>=2.21.0",
    "xenon>=0.9.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.2.5",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "mock-alchemy>=0.2.6",
]
